# stochastic-rs

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CUDA_BENCHMARK.md  Cargo.toml  LICENSE  README.md  build.rs  publish.sh  pyproject.toml
stochastic-rs-ai/: Cargo.toml
stochastic-rs-ai/src/: lib.rs  traits.rs
stochastic-rs-ai/src/volatility/: common.rs  heston.rs  one_factor.rs  rbergomi.rs
stochastic-rs-copulas/: Cargo.toml
stochastic-rs-copulas/src/: bivariate.rs  correlation.rs  lib.rs  macros.rs  multivariate.rs  process_coupling.rs  python.rs  samples.rs  traits.rs
stochastic-rs-copulas/src/bivariate/: amh.rs  clayton.rs  fgm.rs  frank.rs  galambos.rs  gumbel.rs  husler_reiss.rs  independence.rs  joe.rs  marshall_olkin.rs  plackett.rs  t_copula.rs
stochastic-rs-copulas/src/multivariate/: cvine.rs  gaussian.rs  nac.rs  rvine.rs  t.rs  tree.rs  vine.rs
stochastic-rs-copulas/src/traits/: bivariate.rs  multivariate.rs
stochastic-rs-copulas/src/univariate/: gaussian.rs
stochastic-rs-copulas/tests/: bivariate_recovery.rs
stochastic-rs-core/: Cargo.toml
stochastic-rs-core/src/: lib.rs  python.rs  simd_rng.rs  simd_rng_dual.rs
stochastic-rs-core/src/simd_rng/: fill.rs  mod.rs  simd_rng.rs  tests.rs  xoshiro.rs
stochastic-rs-distributions/: Cargo.toml
stochastic-rs-distributions/src/: alpha_stable.rs  beta.rs  binomial.rs  cauchy.rs  chi_square.rs  complex.rs  dirichlet.rs  exp.rs  float_impls.rs  gamma.rs  ged.rs  geometric.rs  gev.rs  hypergeometric.rs  inverse_gauss.rs  lib.rs  lognormal.rs  macros.rs  non_central_chi_squared.rs  normal.rs  normal_inverse_gauss.rs  pareto.rs  poisson.rs  simd_float_impls.rs  skellam.rs  special.rs  studentt.rs  traits.rs  truncated.rs  uniform.rs  weibull.rs  wishart.rs
stochastic-rs-distributions/src/tests/: bench_continuous_a.rs  bench_continuous_b.rs  bench_summary.rs  distribution_plot.rs  mod.rs  simd_ops.rs
stochastic-rs-distributions/src/traits/: callable.rs  distribution.rs  float.rs
stochastic-rs-distributions/tests/: distribution_ext_vs_reference.rs
stochastic-rs-py/: Cargo.toml  python_smoke.py
stochastic-rs-py/src/: lib.rs  lib.rs.pending
stochastic-rs-py/tests/: conftest.py  test_calendar.py  test_copulas.py  test_distributions.py  test_quant.py  test_stats.py  test_stochastic.py
stochastic-rs-quant/: Cargo.toml
stochastic-rs-quant/src/: bonds.rs  calendar.rs  calibration.rs  cashflows.rs  factors.rs  fourier_malliavin.rs  fx.rs  inflation.rs  instruments.rs  lattice.rs  lib.rs  loss.rs  macros.rs  market.rs  microstructure.rs  order_book.rs  portfolio.rs  pricing.rs  python.rs  risk.rs  strategies.rs  traits.rs  types.rs  vol_surface.rs  yahoo.rs
stochastic-rs-quant/src/bonds/: cir.rs  hull_white.rs  vasicek.rs
stochastic-rs-quant/src/calendar/: business_day.rs  date_math.rs  day_count.rs  holiday.rs  schedule.rs
stochastic-rs-quant/src/calibration/: bsm.rs  cgmysv.rs  double_heston.rs  heston.rs  heston_stoch_corr.rs  hkde.rs  hw_swaption.rs  levy.rs  quadrature_tests.rs  rbergomi.rs  sabr.rs  sabr_caplet.rs  svj.rs
stochastic-rs-quant/src/cashflows/: coupon.rs  engine.rs  leg.rs  types.rs
stochastic-rs-quant/src/credit/: bootstrap.rs  cds.rs  merton.rs  migration.rs  survival_curve.rs
stochastic-rs-quant/src/curves/: bootstrap.rs  discount_curve.rs  interpolation.rs  multi_curve.rs  types.rs
stochastic-rs-quant/src/factors/: fama_macbeth.rs  pairs.rs  pca.rs  shrinkage.rs
stochastic-rs-quant/src/fourier_malliavin/: coefficients.rs  engine.rs  optimal_cutting_tests.rs
stochastic-rs-quant/src/fx/: currency.rs  delta.rs  forward.rs  quoting.rs  smile.rs
stochastic-rs-quant/src/inflation/: curve.rs  swap.rs
stochastic-rs-quant/src/instruments/: bond.rs  equity.rs  option.rs  swap.rs
stochastic-rs-quant/src/lattice/: equity.rs  short_rate.rs  tree.rs
stochastic-rs-quant/src/market/: book.rs  cached.rs  fra.rs  handle.rs  indices.rs  money_market.rs  observable.rs  provider.rs  quote.rs  rate_helper.rs  yahoo_provider.rs
stochastic-rs-quant/src/microstructure/: almgren_chriss.rs  kyle.rs  spread.rs
stochastic-rs-quant/src/portfolio/: covariance.rs  data.rs  engine.rs  momentum.rs  optimizers.rs  types.rs
stochastic-rs-quant/src/pricing/: asian.rs  autocallable.rs  barrier.rs  basket.rs  bermudan.rs  bjerksund_stensland.rs  breeden_litzenberger.rs  bsm.rs  cf_quadrature.rs  cgmysv.rs  chooser.rs  cliquet.rs  compound.rs  digital.rs  dupire.rs  engines.rs  execution_cost.rs  finite_difference.rs  fourier.rs  heston.rs  heston_stoch_corr.rs  kirk.rs  lookback.rs  malliavin_gbm.rs  malliavin_greeks.rs  merton_jump.rs  rainbow.rs  rbergomi.rs  regime_switching.rs  sabr.rs  snell_envelope.rs  spread.rs  variance_swap.rs
stochastic-rs-quant/src/python/: bonds.rs  calendar.rs  calibration_advanced.rs  calibration_basic.rs  curves.rs  factors.rs  hscm.rs  microstructure.rs  mod.rs  pricing_analytic.rs  pricing_digital.rs  pricing_fourier.rs  pricing_path_dep.rs  risk.rs  vol_surface.rs
stochastic-rs-quant/src/risk/: credit.rs  drawdown.rs  execution.rs  expected_shortfall.rs  greeks.rs  performance.rs  scenario.rs  var.rs
stochastic-rs-stats/: Cargo.toml
stochastic-rs-stats/src/: bayesian_diffusion.rs  cir.rs  econometrics.rs  fd.rs  fou_estimator.rs  fukasawa_hurst.rs  gaussian_kde.rs  gmm_cir.rs  heston_mle.rs  heston_nml_cekf.rs  leverage.rs  lib.rs  macros.rs  normality.rs  optim.rs  particle_mle.rs  python.rs  qmle.rs  spectral.rs  stationarity.rs  tail_index.rs  traits.rs
stochastic-rs-stats/tests/: fou_bit_exact_regression.rs  fractal_dim_validation.rs  hurst_validation.rs
stochastic-rs-stochastic/: Cargo.toml
stochastic-rs-stochastic/fgn-oxide-kernels/: Cargo.toml  rust-toolchain.toml
stochastic-rs-stochastic/src/: aliases.rs  autoregressive.rs  buffer.rs  device.rs  diffusion.rs  interest.rs  isonormal.rs  ito.rs  lib.rs  macros.rs  noise.rs  numerics.rs  sde.rs  traits.rs  volatility.rs
stochastic-rs-viz/: Cargo.toml
stochastic-rs-viz/src/: convenience.rs  grid_plotter.rs  lib.rs  plottable.rs
(+1023 files in other folders)
