[package]
name = "stochastic-rs"
version = "0.16.0"
edition = "2021"
license = "MIT"
description = "A Rust library for quant finance and simulating stochastic processes."
homepage = "https://github.com/dancixx/stochastic-rs"
documentation = "https://docs.rs/stochastic-rs/latest/stochastic_rs/"
repository = "https://github.com/dancixx/stochastic-rs"
readme = "README.md"
keywords = ["stochastic", "quant", "finance", "simulation", "statistics"]


[dependencies]
anyhow = "1.0.89"
approx = "0.5.1"
argmin = "0.11.0" # UPDATE: ndarray
argmin-math = { version = "0.5", features = ["ndarray_latest-nolinalg"] }
bytemuck = "1.22.0"
candle-core = { version = "0.9.1", optional = true }
candle-datasets = { version = "0.9.1", optional = true }
candle-nn = { version = "0.9.1", optional = true }
chrono = "0.4.38"
cudarc = { version = "0.13.9", optional = true, features = [
    "cuda-12080",
    "cuda-version-from-build-system",
] }
either = "1.15.0"
flate2 = "1.0.34"
gauss-quad = "0.2.1"
impl-new-derive = "0.1.3"
implied-vol = "1.0.0"
indicatif = "0.17.8"
kendalls = "0.2.2"
levenberg-marquardt = "0.14.0" # UPDATE: rand
libloading = { version = "0.8.6", optional = true }
linreg = "0.2.0"
openblas-src = { version = "0.10", features = ["cblas", "static"], optional = true }
mimalloc = { version = "0.1.48", optional = true }
nalgebra = "0.33.2"
ndarray = { version = "0.17.2", features = [
    "rayon",
    "matrixmultiply-threading",
] }
ndarray-npy = "0.9.1"
ndarray-rand = "0.16.0"
ndarray-stats = "0.7.0"
ndrustfft = "0.6.2"
num-complex = { version = "0.4.6", features = ["rand"] } # UPDATE: rand
num-traits = "0.2.19"
phastft = { version = "0.3.0", optional = true }
ordered-float = "5.0.0"
plotly = { version = "0.10.0", features = ["plotly_ndarray"] }
polars = { version = "0.43.1", features = ["lazy"], optional = true }
prettytable-rs = "0.10.0"
quadrature = "0.1.2"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
roots = "0.0.8"
sci-rs = "0.4.1"
scilib = "1.0.0"
statrs = { git = "https://github.com/statrs-dev/statrs.git" } # UPDATE: rand
tempfile = "3.13.0"
tikv-jemallocator = { version = "0.6.1", optional = true }
time = { version = "0.3.36", features = [
    "formatting",
    "parsing",
], optional = true }
tokio-test = "0.4.4"
tracing = "0.1.40"
tracing-test = "0.2.5"
wide = "1.1.0"
yahoo_finance_api = { version = "2.3.0", optional = true }
parking_lot = "0.12.5"

[dev-dependencies]

[features]
ai = ["dep:candle-core", "dep:candle-datasets", "dep:candle-nn", "dep:polars"]
cuda = ["dep:cudarc", "dep:libloading"]
default = ["simd"]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]
phastft = ["dep:phastft"]
simd = []
yahoo = ["dep:time", "dep:yahoo_finance_api", "dep:polars"]

[lib]
name = "stochastic_rs"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
doctest = false

[profile.release]
debug = false
codegen-units = 1
lto = true

# [package.metadata.docs.rs]
# all-features = true
