[workspace]
members = [
    "stochastic-rs-core",
    "stochastic-rs-distributions",
    "stochastic-rs-stochastic",
    "stochastic-rs-copulas",
    "stochastic-rs-stats",
    "stochastic-rs-quant",
    "stochastic-rs-ai",
    "stochastic-rs-viz",
    "stochastic-rs-py",
]

[package]
name = "stochastic-rs"
version = "2.0.0-beta.1"
edition = "2024"
license = "MIT"
description = "A Rust library for quant finance and simulating stochastic processes."
homepage = "https://github.com/dancixx/stochastic-rs"
documentation = "https://docs.rs/stochastic-rs/latest/stochastic_rs/"
repository = "https://github.com/dancixx/stochastic-rs"
readme = "README.md"
keywords = ["stochastic", "quant", "finance", "simulation", "statistics"]
exclude = [
    "**/*.tar.gz",
    "data/**",
    "trainsets/**",
    "src/ai/volatility/*TrainSet.txt.gz",
]

[dependencies]
stochastic-rs-core = { path = "stochastic-rs-core", version = "2.0.0-beta.1" }
stochastic-rs-distributions = { path = "stochastic-rs-distributions", version = "2.0.0-beta.1" }
stochastic-rs-stochastic = { path = "stochastic-rs-stochastic", version = "2.0.0-beta.1" }
stochastic-rs-copulas = { path = "stochastic-rs-copulas", version = "2.0.0-beta.1" }
stochastic-rs-stats = { path = "stochastic-rs-stats", version = "2.0.0-beta.1" }
stochastic-rs-quant = { path = "stochastic-rs-quant", version = "2.0.0-beta.1" }
stochastic-rs-viz = { path = "stochastic-rs-viz", version = "2.0.0-beta.1" }
stochastic-rs-ai = { path = "stochastic-rs-ai", version = "2.0.0-beta.1", optional = true }
anyhow = "1.0.89"
argmin = "0.11.0"
argmin-math = { version = "0.5", features = ["ndarray_latest-nolinalg", "vec"] }
candle-core = { version = "0.9.2", optional = true }
candle-datasets = { version = "0.9.2", optional = true }
candle-nn = { version = "0.9.2", optional = true }
chrono = "0.4.38"
cubecl = { version = "0.9.0", optional = true, default-features = false }
cubecl-cuda = { version = "0.9.0", optional = true }
cubecl-wgpu = { version = "0.9.0", optional = true }
cudarc = { version = "0.19.2", optional = true, features = [
    "cuda-12080",
    "cuda-version-from-build-system",
] }
either = "1.15.0"
flate2 = "1.1.2"
gpu-fft = { version = "1.1.1", optional = true }
gauss-quad = "0.3.1"
implied-vol = "2.0.0"
kendalls = "1.0.0"
levenberg-marquardt = "0.14.0"
linreg = "0.2.0"
openblas-src = { version = "0.10", features = ["cblas"], optional = true }
metal = { version = "0.33.0", optional = true }
mimalloc = { version = "0.1.48", optional = true }
nalgebra = "0.33.2"
ndarray = { version = "0.17.2", features = [
    "rayon",
    "matrixmultiply-threading",
] }
ndarray-linalg = { version = "0.18.1", features = ["openblas-system"], optional = true }
ndarray-npy = "0.10.0"
ndarray-rand = "0.16.0"
ndarray-stats = "0.7.0"
ndrustfft = "0.6.2"
num-complex = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
numpy = { version = "0.27", optional = true }
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
ordered-float = "5.0.0"
owens-t = "0.1.5"
plotly = { version = "0.10.0", features = ["plotly_ndarray"] }
polars = { version = "0.43.1", features = ["lazy"], optional = true }
quadrature = "0.1.2"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
roots = "0.0.8"
sci-rs = "0.4.1"
scilib = "1.0.0"
slsqp = "1.0.0"
statrs = "0.18.0"
tikv-jemallocator = { version = "0.6.1", optional = true }
time = { version = "0.3.36", features = [
    "formatting",
    "parsing",
], optional = true }
tokio-test = { version = "0.4.4", optional = true }
wide = "1.3.0"
hotpath = { version = "0.14", optional = true }
yahoo_finance_api = { version = "2.3.0", optional = true }
parking_lot = "0.12.5"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
rand = "0.9.2"
rand_distr = "0.5.1"
romu = "0.8.0"

[[bench]]
name = "distributions"
harness = false

[[bench]]
name = "fgn_fbm"
harness = false

[[bench]]
name = "rl_rough"
harness = false

[[bench]]
name = "process_generation"
harness = false

[[bench]]
name = "gn_batching"
harness = false

[[bench]]
name = "dist_multicore"
harness = false

[[bench]]
name = "fgn_gpu"
harness = false
required-features = ["gpu"]

[[bench]]
name = "fgn_cuda_native"
harness = false
required-features = ["cuda-native"]

[[bench]]
name = "fgn_all_backends"
harness = false
required-features = ["gpu-wgpu", "metal", "accelerate"]

[[bench]]
name = "fgn_accelerate"
harness = false
required-features = ["accelerate"]

[[bench]]
name = "fgn_metal"
harness = false
required-features = ["metal"]

[[bench]]
name = "poisson_process"
harness = false

[[bench]]
name = "mle"
harness = false

[[bench]]
name = "calendar"
harness = false

[[bench]]
name = "cashflows"
harness = false

[[bench]]
name = "market"
harness = false

[[bench]]
name = "instruments"
harness = false

[[bench]]
name = "credit"
harness = false

[[bench]]
name = "risk"
harness = false

[[bench]]
name = "realized"
harness = false

[[bench]]
name = "microstructure"
harness = false

[[bench]]
name = "factors"
harness = false
required-features = ["openblas"]

[[bench]]
name = "econometrics"
harness = false

[[bench]]
name = "filtering"
harness = false

[[bench]]
name = "lattice"
harness = false

[[bench]]
name = "option"
harness = false


[[bench]]
name = "slv"
harness = false

[[bench]]
name = "hotpath_profile"
harness = false
required-features = ["hotpath"]

[features]
ai = ["dep:stochastic-rs-ai"]
cuda-native = ["dep:cudarc", "cudarc/cufft"]
default = []
openblas = ["dep:ndarray-linalg", "dep:openblas-src"]
accelerate = []
gpu = ["dep:cubecl", "dep:gpu-fft"]
metal = ["dep:metal"]
gpu-cuda = ["gpu", "dep:cubecl-cuda"]
gpu-wgpu = ["gpu", "dep:cubecl-wgpu"]
jemalloc = ["dep:tikv-jemallocator"]
# Python bindings live in `stochastic-rs-py` (separate cdylib). Enabling
# `python` here just turns on the upstream feature flags so the umbrella
# build is consistent with the cdylib build. The actual Python module
# (`stochastic_rs`) is produced by `cargo build -p stochastic-rs-py` or
# via `maturin develop` from the `stochastic-rs-py` directory.
python = [
    "dep:pyo3",
    "dep:numpy",
    "stochastic-rs-distributions/python",
    "stochastic-rs-stochastic/python",
]
mimalloc = ["dep:mimalloc"]
yahoo = ["dep:time", "dep:yahoo_finance_api", "dep:polars", "dep:tokio-test"]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]

[lib]
name = "stochastic_rs"
crate-type = ["lib"]
path = "src/lib.rs"
doctest = false

[profile.release]
debug = false
codegen-units = 1
lto = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "docs/katex-header.html"]
