[package]
name = "stochastic-rs-ai"
version = "2.0.0-beta.1"
edition = "2024"
license = "MIT"
description = "AI / neural surrogates for volatility models."
repository = "https://github.com/dancixx/stochastic-rs"
publish = false

[lib]
doctest = false

[features]
default = []

[dependencies]
stochastic-rs-core = { path = "../stochastic-rs-core", version = "2.0.0-beta.1" }
stochastic-rs-distributions = { path = "../stochastic-rs-distributions", version = "2.0.0-beta.1" }
stochastic-rs-stochastic = { path = "../stochastic-rs-stochastic", version = "2.0.0-beta.1" }
candle-core = "0.9.2"
candle-datasets = "0.9.2"
candle-nn = "0.9.2"
polars = { version = "0.43.1", features = ["lazy"] }
ndarray = { version = "0.17.2", features = ["rayon", "matrixmultiply-threading"] }
ndarray-npy = "0.10.0"
ndarray-rand = "0.16.0"
flate2 = "1.1.2"
rand = "0.9.2"
rand_distr = "0.5.1"
num-traits = "0.2.19"
anyhow = "1.0.89"
parking_lot = "0.12.5"
plotly = { version = "0.10.0", features = ["plotly_ndarray"] }
