[package]
name = "stochastic-rs-ai"
version = "2.0.0-beta.3"
edition = "2024"
license = "MIT"
description = "AI / neural surrogates for volatility models."
repository = "https://github.com/dancixx/stochastic-rs"
exclude = ["src/volatility/*TrainSet.txt.gz", "**/*.gz"]

[lib]
doctest = false

[features]
default = []

[dependencies]
stochastic-rs-core = { workspace = true }
stochastic-rs-distributions = { workspace = true }
stochastic-rs-stochastic = { workspace = true }
candle-core = { workspace = true }
candle-datasets = { workspace = true }
candle-nn = { workspace = true }
polars = { workspace = true, features = ["lazy"] }
ndarray = { workspace = true, features = ["rayon", "matrixmultiply-threading"] }
ndarray-npy = { workspace = true }
ndarray-rand = { workspace = true }
flate2 = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
num-traits = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
plotly = { workspace = true, features = ["plotly_ndarray"] }
