[package]
name = "stochastic-rs-ai"
version = "2.0.0-rc.2"
edition = "2024"
license = "MIT"
description = "AI / neural surrogates for volatility models."
homepage = "https://github.com/dancixx/stochastic-rs"
documentation = "https://docs.rs/stochastic-rs-ai"
repository = "https://github.com/dancixx/stochastic-rs"
keywords = ["volatility", "neural-network", "finance", "quant", "surrogate"]
categories = ["finance", "mathematics", "science"]
exclude = ["src/volatility/*TrainSet.txt.gz", "**/*.gz"]

[lib]
doctest = false

[features]
default = []
# Bridge feature: enables `StochVolNn::predict_implied_vol_surface` which
# packages a Nn prediction into a `stochastic_rs_quant::ImpliedVolSurface`.
quant = ["dep:stochastic-rs-quant"]

[dependencies]
stochastic-rs-core = { workspace = true }
stochastic-rs-distributions = { workspace = true }
stochastic-rs-stochastic = { workspace = true }
stochastic-rs-quant = { workspace = true, optional = true }
candle-core = { workspace = true }
candle-datasets = { workspace = true }
candle-nn = { workspace = true }
polars = { workspace = true, features = ["lazy"] }
ndarray = { workspace = true, features = ["rayon", "matrixmultiply-threading"] }
ndarray-npy = { workspace = true }
ndarray-rand = { workspace = true }
flate2 = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
num-traits = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
plotly = { workspace = true, features = ["plotly_ndarray"] }
