[package]
name = "stochastic-rs-copulas"
version = "2.0.0-beta.1"
edition = "2024"
license = "MIT"
description = "Bivariate, multivariate, and empirical copulas."
repository = "https://github.com/dancixx/stochastic-rs"
publish = false

[lib]
doctest = false

[features]
default = []
openblas = ["dep:ndarray-linalg", "dep:openblas-src"]
python = ["dep:pyo3"]

[dependencies]
stochastic-rs-core = { path = "../stochastic-rs-core", version = "2.0.0-beta.1" }
stochastic-rs-distributions = { path = "../stochastic-rs-distributions", version = "2.0.0-beta.1" }
ndarray = { version = "0.17.2", features = ["rayon", "matrixmultiply-threading"] }
ndarray-stats = "0.7.0"
ndarray-linalg = { version = "0.18.1", features = ["openblas-system"], optional = true }
openblas-src = { version = "0.10", features = ["cblas"], optional = true }
ndarray-rand = "0.16.0"
nalgebra = "0.33.2"
num-traits = "0.2.19"
num-complex = "0.4.6"
rand = "0.9.2"
rand_distr = "0.5.1"
roots = "0.0.8"
kendalls = "1.0.0"
statrs = "0.18.0"
levenberg-marquardt = "0.14.0"
argmin = "0.11.0"
argmin-math = { version = "0.5", features = ["ndarray_latest-nolinalg", "vec"] }
gauss-quad = "0.3.1"
quadrature = "0.1.2"
owens-t = "0.1.5"
plotly = { version = "0.10.0", features = ["plotly_ndarray"] }
either = "1.15.0"
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
