[package]
name = "stochastic-rs-copulas"
version = "2.0.0-beta.2"
edition = "2024"
license = "MIT"
description = "Bivariate, multivariate, and empirical copulas."
repository = "https://github.com/dancixx/stochastic-rs"
publish = false

[lib]
doctest = false

[features]
default = []
openblas = ["dep:ndarray-linalg", "dep:openblas-src"]
python = ["dep:pyo3"]

[dependencies]
stochastic-rs-core = { workspace = true }
stochastic-rs-distributions = { workspace = true }
ndarray = { workspace = true, features = ["rayon", "matrixmultiply-threading"] }
ndarray-stats = { workspace = true }
ndarray-linalg = { workspace = true, features = ["openblas-system"], optional = true }
openblas-src = { workspace = true, features = ["cblas"], optional = true }
ndarray-rand = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
roots = { workspace = true }
kendalls = { workspace = true }
statrs = { workspace = true }
levenberg-marquardt = { workspace = true }
argmin = { workspace = true }
argmin-math = { workspace = true, features = ["ndarray_latest-nolinalg", "vec"] }
gauss-quad = { workspace = true }
quadrature = { workspace = true }
owens-t = { workspace = true }
plotly = { workspace = true, features = ["plotly_ndarray"] }
either = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"], optional = true }
