[package]
name = "stochastic-rs-copulas"
version = "2.0.0-beta.3"
edition = "2024"
license = "MIT"
description = "Bivariate, multivariate, and empirical copulas."
homepage = "https://github.com/dancixx/stochastic-rs"
documentation = "https://docs.rs/stochastic-rs-copulas"
repository = "https://github.com/dancixx/stochastic-rs"
keywords = ["copula", "dependence", "statistics", "gaussian", "vine"]
categories = ["mathematics", "simulation", "science"]

[lib]
doctest = false

[features]
default = []
openblas = ["dep:ndarray-linalg", "dep:openblas-src"]
python = [
    "dep:pyo3",
    "stochastic-rs-core/python",
    "stochastic-rs-distributions/python",
]

[dependencies]
stochastic-rs-core = { workspace = true }
stochastic-rs-distributions = { workspace = true }
ndarray = { workspace = true, features = ["rayon", "matrixmultiply-threading"] }
ndarray-stats = { workspace = true }
ndarray-linalg = { workspace = true, features = ["openblas-system"], optional = true }
openblas-src = { workspace = true, features = ["cblas"], optional = true }
ndarray-rand = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
roots = { workspace = true }
kendalls = { workspace = true }
levenberg-marquardt = { workspace = true }
argmin = { workspace = true }
argmin-math = { workspace = true, features = ["ndarray_latest-nolinalg", "vec"] }
gauss-quad = { workspace = true }
quadrature = { workspace = true }
owens-t = { workspace = true }
plotly = { workspace = true, features = ["plotly_ndarray"] }
either = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"], optional = true }
