[package]
name = "stochastic-rs-core"
version = "2.0.0-beta.3"
edition = "2024"
license = "MIT"
description = "Core traits, SIMD RNG, and macros for stochastic-rs."
repository = "https://github.com/dancixx/stochastic-rs"

[lib]
doctest = false

[features]
default = []
python = []

[dependencies]
rand = { workspace = true }
wide = { workspace = true }
ndarray = { workspace = true }
