[package]
name = "stochastic-rs-core"
version = "2.0.0-rc.1"
edition = "2024"
license = "MIT"
description = "Core traits, SIMD RNG, and macros for stochastic-rs."
homepage = "https://github.com/dancixx/stochastic-rs"
documentation = "https://docs.rs/stochastic-rs-core"
repository = "https://github.com/dancixx/stochastic-rs"
keywords = ["stochastic", "simd", "rng", "monte-carlo", "simulation"]
categories = ["algorithms", "mathematics", "simulation"]

[lib]
doctest = false

[features]
default = []
python = []

[dependencies]
rand = { workspace = true }
wide = { workspace = true }
ndarray = { workspace = true }
