[package]
name = "stochastic-rs-core"
version.workspace = true
edition = "2024"
license = "MIT"
description = "Core traits, SIMD RNG, and macros for stochastic-rs."
homepage = "https://github.com/dancixx/stochastic-rs"
documentation = "https://docs.rs/stochastic-rs-core"
repository = "https://github.com/dancixx/stochastic-rs"
keywords = ["stochastic", "simd", "rng", "monte-carlo", "simulation"]
categories = ["algorithms", "mathematics", "simulation"]

[lib]
doctest = false

[features]
default = []
python = []
# Experimental dual-stream RNG. Adds a parallel `SimdRngDual` engine
# alongside `SimdRng` for distributions that benefit from
# instruction-level pipelining of two independent xoshiro state updates
# (Ziggurat-based: Normal, Exp). Default-off: the deterministic stream of
# `SimdRngDual::from_seed` does not match `SimdRng::from_seed`, and the
# feature is intentionally additive so callers can opt in per workload.
dual-stream-rng = []

[dependencies]
rand = { workspace = true }
wide = { workspace = true }
ndarray = { workspace = true }
