[package]
name = "stochastic-rs-distributions"
version = "2.0.0-beta.1"
edition = "2024"
license = "MIT"
description = "Probability distributions with SIMD bulk sampling."
repository = "https://github.com/dancixx/stochastic-rs"
publish = false

[lib]
doctest = false

[features]
default = []
python = ["dep:pyo3", "dep:numpy", "stochastic-rs-core/python"]

[dependencies]
stochastic-rs-core = { path = "../stochastic-rs-core", version = "2.0.0-beta.1" }
ndarray = { version = "0.17.2", features = ["rayon", "matrixmultiply-threading"] }
rand = "0.9.2"
rand_distr = "0.5.1"
wide = "1.3.0"
num-traits = "0.2.19"
num-complex = { version = "0.4.6", features = ["rand"] }
rayon = "1.11.0"
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
numpy = { version = "0.27", optional = true }
plotly = { version = "0.10.0", features = ["plotly_ndarray"] }
statrs = "0.18.0"

[dev-dependencies]
romu = "0.8.0"
statrs = "0.18.0"
