[package]
name = "stochastic-rs-distributions"
version = "2.0.0-rc.0"
edition = "2024"
license = "MIT"
description = "Probability distributions with SIMD bulk sampling."
homepage = "https://github.com/dancixx/stochastic-rs"
documentation = "https://docs.rs/stochastic-rs-distributions"
repository = "https://github.com/dancixx/stochastic-rs"
keywords = ["distributions", "probability", "simd", "statistics", "sampling"]
categories = ["mathematics", "science", "algorithms"]

[lib]
doctest = false

[features]
default = []
python = ["dep:pyo3", "dep:numpy", "stochastic-rs-core/python"]

[dependencies]
stochastic-rs-core = { workspace = true }
ndarray = { workspace = true, features = ["rayon", "matrixmultiply-threading"] }
rand = { workspace = true }
rand_distr = { workspace = true }
wide = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true, features = ["rand"] }
rayon = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"], optional = true }
numpy = { workspace = true, optional = true }
plotly = { workspace = true, features = ["plotly_ndarray"] }

[dev-dependencies]
romu = { workspace = true }
# `statrs` is dev-only — used to cross-validate closed-form `DistributionExt`
# impls in `tests/distribution_ext_vs_reference.rs`. Production code never
# delegates to statrs.
statrs = { workspace = true }
