[package]
name = "stochastic-rs-py"
version = "2.0.0-beta.1"
edition = "2024"
license = "MIT"
description = "Python (pyo3) bindings for stochastic-rs."
repository = "https://github.com/dancixx/stochastic-rs"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
stochastic-rs-core = { path = "../stochastic-rs-core", version = "2.0.0-beta.1", features = ["python"] }
stochastic-rs-distributions = { path = "../stochastic-rs-distributions", version = "2.0.0-beta.1", features = ["python"] }
stochastic-rs-stochastic = { path = "../stochastic-rs-stochastic", version = "2.0.0-beta.1", features = ["python"] }
pyo3 = { version = "0.27", features = ["extension-module"] }
