[package]
name = "stochastic-rs-py"
version = "2.0.0-rc.2"
edition = "2024"
license = "MIT"
description = "Python (pyo3) bindings for stochastic-rs."
repository = "https://github.com/dancixx/stochastic-rs"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = []
openblas = [
    "stochastic-rs-copulas/openblas",
    "stochastic-rs-stats/openblas",
    "stochastic-rs-stochastic/openblas",
    "stochastic-rs-quant/openblas",
]
# Vendored / static OpenBLAS — only used by the Windows wheel CI job because
# the prebuilt MinGW `.lib` does not link cleanly with MSVC. Linux + macOS
# wheels use `openblas` (system-link) and bundle libopenblas via
# `auditwheel` / `delocate-wheel` post-processing.
openblas-static = [
    "stochastic-rs-copulas/openblas-static",
    "stochastic-rs-stats/openblas-static",
    "stochastic-rs-stochastic/openblas-static",
    "stochastic-rs-quant/openblas-static",
]

[dependencies]
stochastic-rs-core = { workspace = true, features = ["python"] }
stochastic-rs-distributions = { workspace = true, features = ["python"] }
stochastic-rs-stochastic = { workspace = true, features = ["python"] }
stochastic-rs-copulas = { workspace = true, features = ["python"] }
stochastic-rs-stats = { workspace = true, features = ["python"] }
stochastic-rs-quant = { workspace = true, features = ["python"] }
pyo3 = { workspace = true, features = ["extension-module"] }
numpy = { workspace = true }
ndarray = { workspace = true }
